devopszon-dev/featureflag/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: featureflag
  namespace: featureflag
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: '100m'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '60'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '60'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '60'
    nginx.ingress.kubernetes.io/rewrite-target: '/'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    deneme: 'test'
spec:
  ingressClassName: nginx
  rules:
    - host: www.featureflag-test8.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: featureflag
                port:
                  number: 80
  tls:
  - hosts:
    - www.featureflag-test8.com
    secretName: featureflag-ingress-secret
